# roundup

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  settings.json  vercel.json
src/: database.py  main.py
src/models/: event.py  participant.py  round.py  table.py  table_allocation.py
src/routers/: allocation.py  events.py  participants.py  tables.py
src/schemas/: event.py  participant.py  round.py  round_summary.py  table.py  table_allocation.py
src/services/: allocation_service.py  event_service.py  participant_service.py  table_service.py
tests/: conftest.py  helpers.py  test_allocation.py  test_allocation_service.py  test_events.py  test_participants.py  test_tables.py
